--- a/ProyectoDesarrolloSoftware/ProyectoDesarrollo.Test/ProyectoDesarrollo.Test.csproj
+++ b/ProyectoDesarrolloSoftware/ProyectoDesarrollo.Test/ProyectoDesarrollo.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="MockQueryable.Core" Version="6.0.1" />
+    <PackageReference Include="Moq" Version="4.18.1" />
+    <PackageReference Include="Moq.AutoMock" Version="3.4.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,10 +25,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProyectoDesarrolloSoftware\ProyectoDesarrolloSoftware.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DataSeed\" />
   </ItemGroup>
 
 </Project>
