--- a/ProyectoDesarrolloSoftware/BussinessLogic.Command/ProyectoDesarrolloSoftware.BussinessLogic.Command.csproj
+++ b/ProyectoDesarrolloSoftware/BussinessLogic.Command/ProyectoDesarrolloSoftware.BussinessLogic.Command.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\Atomics\" />
+    <Folder Include="Commands\Composes\" />
+  </ItemGroup>
+
 </Project>
